2010-07-12  Jie Zhang  <jie@codesourcery.com>

	* config/arm/arm.c (arm_get_frame_offsets): Don't use r3 to
	align the stack when it's going to be saved.

2010-07-11  Kai Tietz  <kai.tietz@onevision.com>

	Merged back from trunk
	* config/i386/winnt.c (i386_pe_file_end): Quote symbol name
	in directive -export.

2010-07-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44886
	* tree-vect-stmts.c (vectorizable_assignment): Fixup backport
	of the fix for PR44284.

2010-07-09  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2010-05-28  Nathan Froyd  <froydnj@codesourcery.com>

	* tree-vect-stmts.c (vectorizable_assignment): Call build1 instead of
	build1_stat.

2010-07-09  Dave Korn  <dave.korn.cygwin@gmail.com>

	Backport from mainline
	2010-05-06  Dave Korn  <dave.korn.cygwin@gmail.com>

	PR target/43888
	* config/i386/winnt.c (i386_pe_binds_local_p): Tweak weak symbol
	handling to still return true for x64 targets.

2010-07-08  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2010-05-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44284
	* tree-vect-stmts.c (vectorizable_assignment): Handle
	sign-changing conversions as simple copy.

	2010-07-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44828
	* convert.c (convert_to_integer): Watch out for overflowing
	MULT_EXPR as well.

2010-07-07  Duncan Sands  <baldrick@free.fr>

	PR middle-end/41355
	* tree.c (build_function_type_skip_args): Copy the original type using
	build_distinct_type_copy rather than copy_node.

2010-07-06  Alexandre Oliva  <aoliva@redhat.com>

	* doc/gimple.texi (GIMPLE_DEBUG): Document.
	* doc/rtl.texi (Debug Information): New node.
	(NOTE_INSN_VAR_LOCATION): Document.
	(debug_insn): Likewise.
	* doc/generic.texi (DEBUG_EXPR_DECL): Document.

2010-07-05  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline:
	PR target/44531
	* config.gcc (sh*-*-*): Use regular expressions instead of